Fix footer overlap issue on mobile

--- a/app/assets/stylesheets/swanaudio.styl
+++ b/app/assets/stylesheets/swanaudio.styl
@@ -85,7 +85,8 @@ header
     display: none
     flex: 1 0 100%
 
-  aside>a
+  header>aside>a
+    padding: 10px 1rem
     animation: slide-down
     animation-duration: 250ms
     animation-fill-mode: forwards
@@ -185,7 +186,6 @@ footer
       display: block
 
     section, recent-tweets, recent-instagram
-      flex: 1 0 0
       padding: 0 30px
 
       p, ul
